<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:layout_marginTop="55dp"
    android:paddingLeft="16dp"
    tools:context=".HouseActivity">

    <TextView
        android:id="@+id/mascot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/mascot"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/mascot2"
        />
    <TextView
        android:id="@+id/mascot2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/mascot2"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/head_of_house"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/head_of_house"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/mascot2"  />
    <TextView
        android:id="@+id/head_of_house2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/head_of_house2"
        android:layout_below="@id/mascot2"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/house_ghost"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/house_ghost"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/head_of_house" />
    <TextView
        android:id="@+id/house_ghost2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/house_ghost2"
        android:layout_below="@id/head_of_house"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/founder"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/founder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/house_ghost" />
    <TextView
        android:id="@+id/founder2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/founder2"
        android:layout_below="@id/house_ghost"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/school"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/school"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/founder" />
    <TextView
        android:id="@+id/school2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/school"
        android:layout_below="@id/founder"
        android:layout_alignParentRight="true"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:layout_below="@+id/school"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:layout_below="@+id/school"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>