<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">
    <Button
        android:id="@+id/buttonHouseList"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/house_list_option"
        android:layout_below="@+id/founder2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <Button
        android:id="@+id/buttonStudentRegistry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/student_registry_option"
        android:layout_below="@+id/founder2"
        android:layout_alignParentRight="true"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <Button

        android:id="@+id/buttonSpellsRegistry"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/spells_registry"
        android:layout_below="@+id/buttonMember"
        android:layout_alignParentLeft="true"
        />


</LinearLayout>
